<resources>
    <string name="app_name">ExamApp</string>
    <string name="logo_vsc">logo_vsc</string>
    <string name="search">Search</string>
    <string name="repositories">Repositories</string>
    <string name="github_only">Github Only</string>
    <string name="bitbucket_only">Bitbucket Only</string>
    <string name="sort_alphabetically">Sort Alphabetically</string>
    <string name="sort_revert">Sort Revert</string>
    <string name="name">Name:</string>
    <string name="repository">Repository:</string>
    <string name="webservice">WebService:</string>
    <string name="description">Description:</string>
    <string name="all_repositories">All Repositories</string>
</resources>