<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/all_repos"
        android:title="@string/all_repositories"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter_github"
        android:title="@string/github_only"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter_bitbucket"
        android:title="@string/bitbucket_only"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_alphabetically"
        android:title="@string/sort_alphabetically"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_revert"
        android:title="@string/sort_revert"
        app:showAsAction="never" />
</menu>