<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue_500"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:navigationIconTint="@color/white"
            app:title="Info"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/owner_image"
        android:layout_width="@dimen/detail_avatar_size"
        android:layout_height="@dimen/detail_avatar_size"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/item_avatar_radius"
        tools:src="@tools:sample/avatars" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/webservice_image"
        android:layout_width="@dimen/detail_icon_size"
        android:layout_height="@dimen/detail_icon_size"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="@id/owner_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/owner_image"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/title_name"
        style="@style/TitleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@id/owner_image"
        app:layout_constraintTop_toBottomOf="@id/owner_image" />

    <TextView
        android:id="@+id/title_repository"
        style="@style/TitleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repository"
        app:layout_constraintStart_toStartOf="@id/owner_image"
        app:layout_constraintTop_toBottomOf="@id/title_name" />

    <TextView
        android:id="@+id/title_webservice"
        style="@style/TitleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webservice"
        app:layout_constraintStart_toStartOf="@id/owner_image"
        app:layout_constraintTop_toBottomOf="@id/title_repository" />

    <TextView
        android:id="@+id/title_description"
        style="@style/TitleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@id/owner_image"
        app:layout_constraintTop_toBottomOf="@id/title_webservice" />

    <TextView
        android:id="@+id/text_name"
        style="@style/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/title_webservice"
        app:layout_constraintTop_toTopOf="@id/title_name"
        tools:text="Vlad" />

    <TextView
        android:id="@+id/text_repository"
        style="@style/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toTopOf="@id/title_repository"
        tools:text="RepoName" />


    <TextView
        android:id="@+id/text_webservice"
        style="@style/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toTopOf="@id/title_webservice"
        tools:text="WebService" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toTopOf="@id/title_description">

        <TextView
            android:id="@+id/text_description"
            style="@style/TextDescription"
            android:layout_width="@dimen/detail_description_width"
            android:layout_height="wrap_content"
            tools:text="I'm not sure how you could possibly get either of those values. 12 + 23 = 35. How in the world you are getting 421 and 606 is beyond me. Maybe confirm what you typed in your question and then I'll see if I can help. Await on an async is typically replaced with withContext(yourProviderThread){} and then no await is required, but either way async { someMethod }.await() is acceptable, if you don't await in line, then you can easily do one.await() + two.await() and that should give the same value as well. But hard to speculate when your output doesn't line up" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>